# magic_piano

./: CLAUDE.md  Cargo.toml  README.md  deploy.sh  develop.sh  index.html  magic_piano-5b5593ba796824d0.js  magic_piano-77cf056f1a4076ae.js  magic_piano-963cd81fd0d30dc2.js  magic_piano-ee924254511f85d0.js  main-3e66fa70efceade7.css  main-9945f4f15354a38b.css  main-acd2507d53035a2b.css  main.css  tailwind.config.js
.claude/: settings.local.json
docs/: adding-features.md  architecture.md  development-patterns.md  troubleshooting.md
examples/: .editorconfig  A Million Stars.ly  A Million Stars.mid  A Million Stars.mscz  A Million Stars.mxl  Alone with the Crowd.mscz  Alone with the Crowd.mxl  Cheer Up, Charlie.mscz  Cheer Up, Charlie.mxl  Close Your Eyes In Sleep.mscz  Close Your Eyes In Sleep.mxl  Clouds On Fire.mscz  Clouds On Fire.mxl  Crazy Blackbird Tag.mscz  Crazy Blackbird Tag.mxl  Dear Old Pal of Mine.mscz  Dear Old Pal of Mine.mxl  Dinah.mscz  Dinah.mxl  Ebb Tide.mscz  Ebb Tide.mxl  I Have Dreamed.mscz  I Have Dreamed.mxl  Ireland, My Ireland.mscz  Ireland, My Ireland.mxl  Johanna.mscz  Johanna.mxl  La Vie En Rose.mscz  La Vie En Rose.mxl  Last Night Was The End Of The World.mscz  Last Night Was The End Of The World.mxl  Like Leave We'll Fall.mscz  Like Leave We'll Fall.mxl  Lone Prairie.ly  Lone Prairie.mid  Lone Prairie.mscz  Lone Prairie.mxl  Lonely For You Am I.mscz  Lonely For You Am I.mxl  Love Come Back To Me.mscz  (+40 more)
src/: future_util.rs  html_util.rs  lib.rs  main.rs  opensheetmusicdisplay_bindings.rs  playback_manager.rs  sampler.rs  song.rs  song_data.rs
src/components/: app.rs  keyboard_listener.rs  mobile_controls.rs  mod.rs  sheet_music.rs  voice_control.rs
