[package]
name = "magic_piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0.0"
futures = "0.3.30"
gloo = { version = "0.11.0", features = ["default", "futures"] }
itertools = "0.13.0"
js-sys = "0.3.61"
log = "0.4"
midly = "0.5.3"
once_cell = "1.19.0"
regex = "1.10.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
watchreload = { git = "https://github.com/ddfisher/watchreload.git", branch = "main" }

[dependencies.web-sys]
version = "0.3"
features = [
    #    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlButtonElement',
    #    'HtmlCanvasElement',
    'Window',
    'EventTarget',
    #    'console',
    'Event',
    'KeyboardEvent',
    'MessageEvent',
    #    'WebSocket',
    #    'Location',


    # WebAudio
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
]
