[package]
name = "magic_piano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.8.0"
console_error_panic_hook = "0.1"
console_log = "1.0.0"
fraction = "0.15.3"
futures = "0.3.30"
gloo = "0.11.0"
itertools = "0.13.0"
js-sys = "0.3.61"
leptos = { version = "0.6.12", features = ["csr"] }
log = "0.4"
once_cell = "1.19.0"
regex = "1.10.5"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3"
features = [
    #    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlButtonElement',
    #    'HtmlCanvasElement',
    'Window',
    'EventTarget',
    #    'console',
    'Event',
    'KeyboardEvent',
    'MessageEvent',
    #    'WebSocket',
    #    'Location',


    # WebAudio
    'AudioBuffer',
    'AudioBufferSourceNode',
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
]
